--- a/style/styles.css
+++ b/style/styles.css
@@ -218,3 +218,15 @@ text-align: center;}
        display: none    ;
     }
 }
+
+.icon-4k {
+    width: 6rem;
+}
+
+.tel {
+    color: #3CC7FA;
+}
+
+.dekoder {
+    width: 3rem ;
+}
